IOSCE-2 User can create a new recursive checklist in Role module.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -274,3 +274,14 @@ SATURDAY = SATURDAY
 SAT = SAT 
 SUNDAY = SUNDAY 
 SUN = SUN 
+
+#Item Type
+TAB = TAB
+TOPIC = TOPIC
+QUESTION = QUESTION
+
+#Option Type
+POPOVER = POPOVER
+SLIDER = SLIDER
+TOGGLE_2 = TOGGLE_2
+TOGGLE_3 = TOGGLE_3
