--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -274,3 +274,14 @@ SATURDAY = Saturday
 SAT = Sat
 SUNDAY = Sunday
 SUN = Sun
+
+#Item Type
+TAB = TAB
+TOPIC = TOPIC
+QUESTION = QUESTION
+
+#Option Type
+POPOVER = POPOVER
+SLIDER = SLIDER
+TOGGLE_2 = TOGGLE_2
+TOGGLE_3 = TOGGLE_3
