--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1041,6 +1041,19 @@ scheduledTrainings=Geplante Trainings
 hideUnavilableSps=Nicht verf\u00FCgbare SPs ausblenden
 exportChecklistQR=Export checklist QR
 
+addOption = addOption
+addCriteria = addCriteria
+itemType = itemType
+optionType = optionType
+isRegressionItem = isRegressionItem
+tabErrorMessage = Name should not be empty
+
+exportToeOSCE = exportToeOSCE
+exportToiOSCE = exportToiOSCE
+editSection = editSection
+deleteTab = deleteTab
+optionValueErrMessage = optionValueErrMessage
+optionValueEmptyMessage = optionValueEmptyMessage
 downloadeOSCE = downloadeOSCE
 downloadiOSCE = downloadiOSCE
 
