--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1025,7 +1025,19 @@ hideUnavilableSps=Hide unavailable SPs
 
 exportChecklistQR=Export checklist QR
 
+addOption = Add Option
+addCriteria = Add Criteria
+itemType = Item Type
+optionType = Option Type
+isRegressionItem = Is Regression Item 
+tabErrorMessage = Name should not be empty
 
+exportToeOSCE = Export to eOSCE
+exportToiOSCE = Export to iOSCE (QR)
+editSection = Edit section
+deleteTab = Delete this tab
+optionValueErrMessage = Option value must be integer
+optionValueEmptyMessage = Option value should not be empty
 downloadeOSCE = Download eOSCE
 downloadiOSCE = Download iOSCE
 
