--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup.properties
@@ -273,3 +273,15 @@ SATURDAY = Samstag
 SAT = Sa
 SUNDAY = Sonntag
 SUN = So
+
+
+#Item Type
+TAB = TAB
+TOPIC = TOPIC
+QUESTION = QUESTION
+
+#Option Type
+POPOVER = POPOVER
+SLIDER = SLIDER
+TOGGLE_2 = TOGGLE_2
+TOGGLE_3 = TOGGLE_3
