IOSCE-80 Create/edit setting data in OSCE view.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1043,3 +1043,20 @@ downloadiOSCE = Download iOSCE
 
 exporteOSCE = Export eOSCE
 exportiOSCE = Export iOSCE
+osceScreenSaverText=Screen saver text
+exportQRCode=Export QR code
+
+bucketInformation=Bucket information
+settingPassword=Setting password
+backUpPeriod=Backup period
+timeUnit=Time unit
+encryptionType=Encryption type
+pointNxtExaminee=Point of next examinee
+examReviewMode=Is review mode
+symmetricKey=Symmetric key
+bucketParameters=Bucket information
+osceSettings=Osce settings
+otherInformation=Other information
+noSettingsForOsceError=No settings are available for this osce
+exportSettingsQRCode=Export settings QR code
+bucketType=Bucket type
