IOSCE-3 Delete checklist components : Tab, Topic, Question

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1065,3 +1065,8 @@ noSettingsForOsceError=No settings are available for this osce
 exportSettingsQRCode=Export settings QR code
 exportSettingsXml=Export Settings xml
 bucketType=Bucket type
+
+eOSCE = eOSCE
+iOSCE = iOSCE
+
+confirmDelete = Are you sure you want to delete?
