--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1078,3 +1078,8 @@ noSettingsForOsceError=No settings are available for this osce
 exportSettingsQRCode=Export settings QR code
 exportSettingsXml=Export Settings xml
 bucketType=Bucket type
+
+eOSCE = eOSCE
+iOSCE = iOSCE
+
+confirmDelete = confirmDelete
