--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1060,3 +1060,8 @@ otherInformation=Other information
 noSettingsForOsceError=No settings are available for this osce
 exportSettingsQRCode=Export settings QR code
 bucketType=Bucket type
+
+eOSCE = eOSCE
+iOSCE = iOSCE
+
+confirmDelete = Are you sure you want to delete?
