IOSCE-118, IOSCE-119 Setting configuration xml and QR code with encryption.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1065,3 +1065,4 @@ eOSCE = eOSCE
 iOSCE = iOSCE
 
 confirmDelete = Are you sure you want to delete?
+credentialsMustNotBeEmpty=Credentials value must not be empty
