--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1070,3 +1070,4 @@ eOSCE = eOSCE
 iOSCE = iOSCE
 
 confirmDelete = Are you sure you want to delete?
+credentialsMustNotBeEmpty=Credentials value must not be empty
