--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -285,3 +285,10 @@ POPOVER = POPOVER
 SLIDER = SLIDER
 TOGGLE_2 = TOGGLE_2
 TOGGLE_3 = TOGGLE_3
+
+#Time unit and encryption
+SECOND=Second
+MINUTE=Minute
+ASYM=Asymmetric
+HASH=Hash
+NO=No encryption
