--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1071,3 +1071,5 @@ iOSCE = iOSCE
 
 confirmDelete = Are you sure you want to delete?
 credentialsMustNotBeEmpty=Credentials value must not be empty
+
+optionNameSizeError = Option name must be less than 50 character
