--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1084,3 +1084,5 @@ iOSCE = iOSCE
 
 confirmDelete = confirmDelete
 credentialsMustNotBeEmpty=Credentials value must not be empty
+
+optionNameSizeError = optionNameSizeError
