IOSCE-81, IOSCE-82, IOSCE-128 Export student and examiner QR code and change settings QR code.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1073,3 +1073,7 @@ confirmDelete = Are you sure you want to delete?
 credentialsMustNotBeEmpty=Credentials value must not be empty
 
 optionNameSizeError = Option name must be less than 50 character
+autoSelection=Autoselection
+screenSaverTime=Screen saver time(In minutes)
+backUpPeriodMustBeInt=Back up period must be integer
+screenSaverTimeMustBeInt=Screen saver time must be integer 
