--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1086,3 +1086,7 @@ confirmDelete = confirmDelete
 credentialsMustNotBeEmpty=Credentials value must not be empty
 
 optionNameSizeError = optionNameSizeError
+autoSelection=Autoselection
+screenSaverTime=Screen saver time(In minutes)
+backUpPeriodMustBeInt=Back up period must be integer
+screenSaverTimeMustBeInt=Screen saver time must be integer 
