IOSCE-85, IOSCE-86 Formative OSCE changes.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1077,3 +1077,7 @@ autoSelection=Autoselection
 screenSaverTime=Screen saver time(In minutes)
 backUpPeriodMustBeInt=Back up period must be integer
 screenSaverTimeMustBeInt=Screen saver time must be integer 
+
+formativeStudentAssignError = You can not assigned student to formative OSCE
+isFormativeOsce = Is formative OSCE
+exportFormativeOsceError = You can not export eOSCE file of formative OSCE
