Bug fixes and design related changes

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -754,7 +754,7 @@ laterLunchError = Sp\u00E4tere Mittagspause nicht erlaubt!
 breakDuration=Pausendauer:
 newBreakDuration=Neue Pausendauer:
 newBreakDurationNotNull=Pausendauer darf nicht leer oder negativ sein!
-ignoreAcceptedOsceDay=Alle akzeptierten SPs anzeigen
+ignoreAcceptedOsceDay=Alle aktiven SPs anzeigen
 
 #payment
 payment = Kostenrechnung
@@ -1026,3 +1026,4 @@ afterNoon=Nachmittag
 overrideSuggestions=Vorschl\u00E4ge ignorieren
 scheduledTrainings=Geplante Trainings
 hideUnavilableSps=Nicht verf\u00FCgbare SPs ausblenden
+noSuggestionsFound=Keine Vorschläge sind für den gegebenen Monat gefunden
