--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -754,7 +754,7 @@ laterLunchError =Later lunch break not allowed!
 breakDuration=Break duration:
 newBreakDuration=New break duration:
 newBreakDurationNotNull=Break duration cannot be empty or negative!
-ignoreAcceptedOsceDay=View all accepted SPs
+ignoreAcceptedOsceDay=Show all active SPs
 
 #payment
 payment = Cost accounting
@@ -1022,3 +1022,4 @@ afterNoon=Afternoon
 overrideSuggestions=Override suggestions
 scheduledTrainings=Scheduled trainings
 hideUnavilableSps=Hide unavailable SPs
+noSuggestionsFound=No suggestions are found for the given month
