--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -752,7 +752,7 @@ laterLunchError = laterLunchError
 breakDuration = breakDuration
 newBreakDuration = newBreakDuration
 newBreakDurationNotNull = newBreakDurationNotNull
-ignoreAcceptedOsceDay = ignoreAcceptedOsceDay
+ignoreAcceptedOsceDay = Alle aktiven SPs anzeigen
 
 #payment
 payment = payment
@@ -1039,3 +1039,4 @@ afterNoon=Nachmittag
 overrideSuggestions=Vorschl\u00E4ge ignorieren
 scheduledTrainings=Geplante Trainings
 hideUnavilableSps=Nicht verf\u00FCgbare SPs ausblenden
+noSuggestionsFound=Keine Vorschläge sind für den gegebenen Monat gefunden
