IOSCE-126 Put proper message on checklist tab, topic, question delete

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1076,3 +1076,9 @@ screenSaverTimeMustBeInt=Screen saver time must be integer
 formativeStudentAssignError = You can not assigned student to formative OSCE
 isFormativeOsce = Is formative OSCE
 exportFormativeOsceError = You can not export eOSCE file of formative OSCE
+
+deleteOptionError = Checklist option could not delete because it used in some OSCE
+deleteCriteriaError = Checklist criteria could not delete because it used in some OSCE
+deleteQuestionError = Checklist question could not delete because it used in some OSCE
+deleteTopicError = Checklist topic could not delete because it used in some OSCE 
+deleteTabError = Checklist tab could not delete because it used in some OSCE
