--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1094,3 +1094,9 @@ screenSaverTimeMustBeInt=screenSaverTimeMustBeInt
 formativeStudentAssignError = formativeStudentAssignError
 isFormativeOsce = isFormativeOsce
 exportFormativeOsceError = exportFormativeOsceError
+
+deleteOptionError = Checklist option could not delete because it used in some OSCE
+deleteCriteriaError = Checklist criteria could not delete because it used in some OSCE
+deleteQuestionError = Checklist question could not delete because it used in some OSCE
+deleteTopicError = Checklist topic could not delete because it used in some OSCE 
+deleteTabError = Checklist tab could not delete because it used in some OSCE
