Display checklist and settings QR code in pop up.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1087,3 +1087,6 @@ deleteCriteriaError = Checklist criteria could not delete because it used in som
 deleteQuestionError = Checklist question could not delete because it used in some OSCE
 deleteTopicError = Checklist topic could not delete because it used in some OSCE 
 deleteTabError = Checklist tab could not delete because it used in some OSCE
+
+checklistQRCode=Checklist QR code
+exportSettingsQR=Settings QR code
