--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1082,3 +1082,6 @@ deleteCriteriaError = Checklist criteria could not delete because it used in som
 deleteQuestionError = Checklist question could not delete because it used in some OSCE
 deleteTopicError = Checklist topic could not delete because it used in some OSCE 
 deleteTabError = Checklist tab could not delete because it used in some OSCE
+
+checklistQRCode=Checklist QR code
+exportSettingsQR=Settings QR code
