--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1090,3 +1090,4 @@ deleteTabError = Checklist tab could not delete because it used in some OSCE
 
 checklistQRCode=Checklist QR code
 exportSettingsQR=Settings QR code
+checklistQuestions=Questions
