--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1085,3 +1085,4 @@ deleteTabError = Checklist tab could not delete because it used in some OSCE
 
 checklistQRCode=Checklist QR code
 exportSettingsQR=Settings QR code
+checklistQuestions=Questions
