--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1091,3 +1091,6 @@ deleteTabError = Checklist tab could not delete because it used in some OSCE
 checklistQRCode=Checklist QR code
 exportSettingsQR=Settings QR code
 checklistQuestions=Questions
+
+importFilesProcessed = No processed files
+fetchFilesFromCloud = Fetch files from cloud
