--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1104,3 +1104,6 @@ deleteTabError = Checklist tab could not delete because it used in some OSCE
 checklistQRCode=Checklist QR code
 exportSettingsQR=Settings QR code
 checklistQuestions=Questions
+
+importFilesProcessed = importFilesProcessed
+fetchFilesFromCloud = fetchFilesFromCloud
