--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1086,3 +1086,6 @@ deleteTabError = Checklist tab could not delete because it used in some OSCE
 checklistQRCode=Checklist QR code
 exportSettingsQR=Settings QR code
 checklistQuestions=Questions
+
+importFilesProcessed = No processed files
+fetchFilesFromCloud = Fetch files from cloud
