IOSCE-149, IOSCE-183, IOSCE-201 Bug fix.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1094,3 +1094,5 @@ checklistQuestions=Questions
 
 importFilesProcessed = No processed files
 fetchFilesFromCloud = Fetch files from cloud
+
+backUpPeriodLengthError=Back up period must not be greater than 2 digits
