--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1107,3 +1107,5 @@ checklistQuestions=Questions
 
 importFilesProcessed = importFilesProcessed
 fetchFilesFromCloud = fetchFilesFromCloud
+
+backUpPeriodLengthError=Back up period must not be greater than 2 digits
