--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1089,3 +1089,5 @@ checklistQuestions=Questions
 
 importFilesProcessed = No processed files
 fetchFilesFromCloud = Fetch files from cloud
+
+backUpPeriodLengthError=Back up period must not be greater than 2 digits
