--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -292,3 +292,10 @@ MINUTE=Minute
 ASYM=Asymmetric
 HASH=Hash
 NO=No encryption
+
+#Exception types of sftp
+JSCH_EXCEPTION = Please enter correct values for sftp bucket information
+SFTP_EXCEPTION = Please enter correct values for sftp bucket information
+UNKNOWN_HOST = No hos
+IO_EXCEPTION = Input / output error
+EXCEPTION = Error exporting files
