German constants chages.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1027,72 +1027,72 @@ overrideSuggestions=Vorschl\u00E4ge ignorieren
 scheduledTrainings=Geplante Trainings
 hideUnavilableSps=Nicht verf\u00FCgbare SPs ausblenden
 
-exportChecklistQR=Export checklist QR
+exportChecklistQR=QR-Code für Checkliste exportieren
 
-addOption = Add Option
-addCriteria = Add Criteria
+addOption =Option hinzufügen
+addCriteria = Kriterium hinzufügen
 itemType = Item Type
 optionType = Option Type
 isRegressionItem = Is Regression Item 
-tabErrorMessage = Name should not be empty
+tabErrorMessage = Name darf nicht leer sein
 
-exportToeOSCE = Export to eOSCE
-exportToiOSCE = Export to iOSCE (QR)
-editSection = Edit section
-deleteTab = Delete this tab
-optionValueErrMessage = Option value must be integer
-optionValueEmptyMessage = Option value should not be empty
-downloadeOSCE = Download eOSCE
-downloadiOSCE = Download iOSCE
+exportToeOSCE = Nach eOSCE exportieren
+exportToiOSCE = Nach iOSCE iOSCE exportieren (QR-Code)
+editSection = Abschnitt bearbeiten
+deleteTab = Tab l\u00F6schen
+optionValueErrMessage = Wert muss eine Zahl sein
+optionValueEmptyMessage = Wert darf nicht leer sein
+downloadeOSCE = Download für eOSCE
+downloadiOSCE = Download für iOSCE
 
-exporteOSCE = Export eOSCE
-exportiOSCE = Export iOSCE
-osceScreenSaverText=Screen saver text
-exportQRCode=Export QR code
+exporteOSCE = eOSCE exportieren
+exportiOSCE = iOSCE exportieren
+osceScreenSaverText=Text für Bildschirmschoner
+exportQRCode=QR-Code exportieren
 
-bucketInformation=Bucket information
-settingPassword=Setting password
-backUpPeriod=Backup period
-timeUnit=Time unit
-encryptionType=Encryption type
-pointNxtExaminee=Point of next examinee
+bucketInformation=Bucket informationen
+settingPassword=Passwort setzen
+backUpPeriod=Backup Periodizität
+timeUnit=Zeiteinheit
+encryptionType=Verschlüsselungstyp
+pointNxtExaminee=Auf nächsten Prüfling hinweisen
 examReviewMode=Is review mode
-symmetricKey=Symmetric key
-bucketParameters=Bucket information
-osceSettings=Osce settings
-otherInformation=Other information
-noSettingsForOsceError=No settings are available for this osce
-exportSettingsQRCode=Export settings QR code
-exportSettingsXml=Export Settings xml
-bucketType=Bucket type
+symmetricKey=Symmetrische Verschlüsselung
+bucketParameters=Bucket informationen
+osceSettings=OSCE Einstellungen
+otherInformation=Weitere informationen
+noSettingsForOsceError=Für diesen OSCE sind keine Einstellungen vorhanden
+exportSettingsQRCode=QR-Code für Einstellungen exportieren
+exportSettingsXml=XML für Einstellungen exportieren
+bucketType=Bucket-Typ
 
 eOSCE = eOSCE
 iOSCE = iOSCE
 
-confirmDelete = Are you sure you want to delete?
+confirmDelete = Wirklich l\u00F6schen?
 credentialsMustNotBeEmpty=Credentials value must not be empty
 
-optionNameSizeError = Option name must be less than 50 character
-autoSelection=Autoselection
-screenSaverTime=Screen saver time(In minutes)
-backUpPeriodMustBeInt=Back up period must be integer
-screenSaverTimeMustBeInt=Screen saver time must be integer 
+optionNameSizeError = Name muss aus weniger als 50 Zeichen bestehen
+autoSelection=Automatische Antwort-Auswahl
+screenSaverTime=Bildschirmschoner nach (in Minuten)
+backUpPeriodMustBeInt=Backup Periodizität muss eine Zahl sein
+screenSaverTimeMustBeInt='Bildschirmschoner nach' muss eine Zahl sein
 
-formativeStudentAssignError = You can not assigned student to formative OSCE
-isFormativeOsce = Is formative OSCE
-exportFormativeOsceError = You can not export eOSCE file of formative OSCE
+formativeStudentAssignError = Zu einem formativen OSCE können keine Studenten im Voraus zugeordnet werden
+isFormativeOsce = Formativer OSCE
+exportFormativeOsceError = Ein formativer OSCE kann nicht nach eOSCE exportiert werden
 
-deleteOptionError = Checklist option could not delete because it used in some OSCE
-deleteCriteriaError = Checklist criteria could not delete because it used in some OSCE
-deleteQuestionError = Checklist question could not delete because it used in some OSCE
-deleteTopicError = Checklist topic could not delete because it used in some OSCE 
-deleteTabError = Checklist tab could not delete because it used in some OSCE
+deleteOptionError = Option konnte nicht gelöscht werden, da die Checkliste verwendet wird
+deleteCriteriaError = Kriterium konnte nicht gelöscht werden, da die Checkliste verwendet wird
+deleteQuestionError = Frage konnte nicht gelöscht werden, da die Checkliste verwendet wird
+deleteTopicError = Thema konnte nicht gelöscht werden, da die Checkliste verwendet wird
+deleteTabError = Tab konnte nicht gelöscht werden, da die Checkliste verwendet wird
 
-checklistQRCode=Checklist QR code
-exportSettingsQR=Settings QR code
-checklistQuestions=Questions
+checklistQRCode=QR-Code für Checkliste
+exportSettingsQR=QR-Code für Einstellungen
+checklistQuestions=Fragen
 
-importFilesProcessed = No processed files
-fetchFilesFromCloud = Fetch files from cloud
+importFilesProcessed = Keine verarbeiteten Dateien
+fetchFilesFromCloud = Dateien vom Server laden
 
-backUpPeriodLengthError=Back up period must not be greater than 2 digits
+backUpPeriodLengthError=Backup Periodizität darf nicht mehr als 2 Stellen haben
