IOSCE-265, IOSCE-262 Bug fix.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1091,7 +1091,7 @@ screenSaverTime=screenSaverTime
 backUpPeriodMustBeInt=backUpPeriodMustBeInt
 screenSaverTimeMustBeInt=screenSaverTimeMustBeInt 
 
-formativeStudentAssignError = formativeStudentAssignError
+formativeStudentAssignError = You cannot assign students to a formative OSCE in advance
 isFormativeOsce = isFormativeOsce
 exportFormativeOsceError = exportFormativeOsceError
 
