--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1073,7 +1073,7 @@ screenSaverTime=Screen saver time(In minutes)
 backUpPeriodMustBeInt=Back up period must be integer
 screenSaverTimeMustBeInt=Screen saver time must be integer 
 
-formativeStudentAssignError = You can not assigned student to formative OSCE
+formativeStudentAssignError = You cannot assign students to a formative OSCE in advance
 isFormativeOsce = Is formative OSCE
 exportFormativeOsceError = You can not export eOSCE file of formative OSCE
 
