--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -299,3 +299,7 @@ SFTP_EXCEPTION = Please enter correct values for sftp bucket information
 UNKNOWN_HOST = No hos
 IO_EXCEPTION = Input / output error
 EXCEPTION = Error exporting files
+
+#ROle factors
+RATIO= Ratio
+NONE= None
