IOSCE-221, IOSCE-281 Update role print pdf and extract student zip file.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1096,3 +1096,5 @@ importFilesProcessed = Keine verarbeiteten Dateien
 fetchFilesFromCloud = Dateien vom Server laden
 
 backUpPeriodLengthError=Backup Periodizität darf nicht mehr als 2 Stellen haben
+ratio=Ratio (in %)
+topicFactor=Topic factor
