--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1109,3 +1109,5 @@ importFilesProcessed = importFilesProcessed
 fetchFilesFromCloud = fetchFilesFromCloud
 
 backUpPeriodLengthError=Back up period must not be greater than 2 digits
+ratio=Ratio (in %)
+topicFactor=Topic factor
