--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1091,3 +1091,5 @@ importFilesProcessed = No processed files
 fetchFilesFromCloud = Fetch files from cloud
 
 backUpPeriodLengthError=Back up period must not be greater than 2 digits
+ratio=Ratio (in %)
+topicFactor=Topic factor
