IOSCE-223, IOSCE-231 Statistic evaluation and updated style issue.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1097,4 +1097,5 @@ fetchFilesFromCloud = Dateien vom Server laden
 
 backUpPeriodLengthError=Backup Periodizität darf nicht mehr als 2 Stellen haben
 ratio=Ratio (in %)
-topicFactor=Topic factor
+topicFactor=Statistic factor
+ratioExceedError=Overall percentage must not exceed 100
