--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1110,4 +1110,5 @@ fetchFilesFromCloud = fetchFilesFromCloud
 
 backUpPeriodLengthError=Back up period must not be greater than 2 digits
 ratio=Ratio (in %)
-topicFactor=Topic factor
+topicFactor=Statistic factor
+ratioExceedError=Overall percentage must not exceed 100
