--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1092,4 +1092,5 @@ fetchFilesFromCloud = Fetch files from cloud
 
 backUpPeriodLengthError=Back up period must not be greater than 2 digits
 ratio=Ratio (in %)
-topicFactor=Topic factor
+topicFactor=Statistic factor
+ratioExceedError=Overall percentage must not exceed 100
