Osce constants file changes.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1096,6 +1096,6 @@ importFilesProcessed = Keine verarbeiteten Dateien
 fetchFilesFromCloud = Dateien vom Server laden
 
 backUpPeriodLengthError=Backup Periodizität darf nicht mehr als 2 Stellen haben
-ratio=Ratio (in %)
-topicFactor=Statistic factor
-ratioExceedError=Overall percentage must not exceed 100
+ratio=Anteil (in %)
+topicFactor=Statistischer Faktor
+ratioExceedError=Aufaddierte Prozentzahlen dürfen 100% nicht übersteigen
