--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_cn.properties
@@ -281,25 +281,29 @@ TOPIC = TOPIC
 QUESTION = QUESTION
 
 #Option Type
-POPOVER = POPOVER
-SLIDER = SLIDER
-TOGGLE_2 = TOGGLE_2
-TOGGLE_3 = TOGGLE_3
+POPOVER = Auswahlfenster
+SLIDER = Slider
+TOGGLE_2 = Richtig/Falsch (2 Werte)
+TOGGLE_3 = Button für 3 Werte
 
-#Time unit and encryption
-SECOND=Second
+#Time unit and signing
+SECOND=Sekunde
 MINUTE=Minute
-ASYM=Asymmetric
+ASYM=Asymmetrisch
 HASH=Hash
-NO=No encryption
+NO=Keine Signierung
 
 #Exception types of sftp
-JSCH_EXCEPTION = Please enter correct values for sftp bucket information
-SFTP_EXCEPTION = Please enter correct values for sftp bucket information
-UNKNOWN_HOST = No hos
-IO_EXCEPTION = Input / output error
-EXCEPTION = Error exporting files
+JSCH_EXCEPTION = Bitte geben Sie gültige Zugangsdaten für die SFTP Verbindung ein
+SFTP_EXCEPTION = Bitte geben Sie gültige Zugangsdaten für die SFTP Verbindung ein
+UNKNOWN_HOST = Server wurde nicht gefunden
+IO_EXCEPTION =Fehler beim Datei-Export
+EXCEPTION = Fehler beim Datei-Export
 
 #ROle factors
 RATIO= Ratio
 NONE= None
+
+ROLE_WEIGHT=Gewichtung
+ROLE_RATIO=Anteil
+ROLE_NONE=Keine
