--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstantsWithLookup_en.properties
@@ -276,30 +276,34 @@ SUNDAY = Sunday
 SUN = Sun
 
 #Item Type
-TAB = TAB
-TOPIC = TOPIC
-QUESTION = QUESTION
+TAB = Tab
+TOPIC = Topic
+QUESTION = Question
 
 #Option Type
-POPOVER = POPOVER
-SLIDER = SLIDER
-TOGGLE_2 = TOGGLE_2
-TOGGLE_3 = TOGGLE_3
+POPOVER = Popover-Selection
+SLIDER = Slider
+TOGGLE_2 = True/False (2 values)
+TOGGLE_3 = Button for 3 states
 
-#Time unit and encryption
+#Time unit and signing
 SECOND=Second
 MINUTE=Minute
 ASYM=Asymmetric
 HASH=Hash
-NO=No encryption
+NO=No signing 
 
 #Exception types of sftp
 JSCH_EXCEPTION = Please enter correct values for sftp bucket information
 SFTP_EXCEPTION = Please enter correct values for sftp bucket information
-UNKNOWN_HOST = No hos
-IO_EXCEPTION = Input / output error
+UNKNOWN_HOST = No host 
+IO_EXCEPTION =Error exporting files
 EXCEPTION = Error exporting files
 
 #ROle factors
 RATIO= Ratio
 NONE= None
+
+ROLE_WEIGHT=Weight
+ROLE_RATIO=Ratio
+ROLE_NONE=None
