--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1039,76 +1039,75 @@ afterNoon=Nachmittag
 overrideSuggestions=Vorschl\u00E4ge ignorieren
 scheduledTrainings=Geplante Trainings
 hideUnavilableSps=Nicht verf\u00FCgbare SPs ausblenden
-exportChecklistQR=Export checklist QR
+exportChecklistQR=QR-Code für Checkliste exportieren
 
-addOption = addOption
-addCriteria = addCriteria
-itemType = itemType
-optionType = optionType
-isRegressionItem = isRegressionItem
-tabErrorMessage = Name should not be empty
+addOption = Option hinzufügen
+addCriteria = Kriterium hinzufügen
+itemType = Item Type
+optionType = Option Type
+isRegressionItem = Is Regression Item 
+tabErrorMessage = Name darf nicht leer sein
 
-exportToeOSCE = exportToeOSCE
-exportToiOSCE = exportToiOSCE
-editSection = editSection
-deleteTab = deleteTab
-optionValueErrMessage = optionValueErrMessage
-optionValueEmptyMessage = optionValueEmptyMessage
-downloadeOSCE = downloadeOSCE
-downloadiOSCE = downloadiOSCE
+exportToeOSCE = Nach eOSCE exportieren
+exportToiOSCE = Nach iOSCE iOSCE exportieren (QR-Code)
+editSection = Abschnitt bearbeiten
+deleteTab = Tab löschen
+optionValueErrMessage = Wert muss eine Zahl sein
+optionValueEmptyMessage = Wert darf nicht leer sein
+downloadeOSCE = Download für eOSCE
+downloadiOSCE = Download für iOSCE
 
-exporteOSCE = exporteOSCE
-exportiOSCE = exportiOSCE
+exporteOSCE = eOSCE exportieren
+exportiOSCE = iOSCE exportieren
+osceScreenSaverText=Text für Bildschirmschoner
+exportQRCode=QR-Code exportieren
 
-osceScreenSaverText=Screen saver text
-exportQRCode=Export QR code
-
-bucketInformation=Bucket information
-settingPassword=Setting password
-backUpPeriod=Backup period
-timeUnit=Time unit
-encryptionType=Encryption type
-pointNxtExaminee=Point of next examinee
+bucketInformation=Bucket informationen
+settingPassword=Passwort setzen
+backUpPeriod=Backup Periodizität
+timeUnit=Zeiteinheit
+encryptionType=Verschlüsselungstyp
+pointNxtExaminee=Auf nächsten Prüfling hinweisen
 examReviewMode=Is review mode
-symmetricKey=Symmetric key
-bucketParameters=Bucket information
-osceSettings=Osce settings
-otherInformation=Other information
-noSettingsForOsceError=No settings are available for this osce
-exportSettingsQRCode=Export settings QR code
-exportSettingsXml=Export Settings xml
-bucketType=Bucket type
+symmetricKey=Symmetrische Verschlüsselung
+bucketParameters=Bucket informationen
+osceSettings=OSCE Einstellungen
+otherInformation=Weitere informationen
+noSettingsForOsceError=Für diesen OSCE sind keine Einstellungen vorhanden
+exportSettingsQRCode=QR-Code für Einstellungen exportieren
+exportSettingsXml=XML für Einstellungen exportieren
+bucketType=Bucket-Typ
 
 eOSCE = eOSCE
 iOSCE = iOSCE
 
-confirmDelete = confirmDelete
+confirmDelete = Wirklich löschen?
 credentialsMustNotBeEmpty=Credentials value must not be empty
 
-optionNameSizeError = optionNameSizeError
-autoSelection=autoSelection
-screenSaverTime=screenSaverTime
-backUpPeriodMustBeInt=backUpPeriodMustBeInt
-screenSaverTimeMustBeInt=screenSaverTimeMustBeInt 
+optionNameSizeError = Name muss aus weniger als 50 Zeichen bestehen
+autoSelection=Automatische Antwort-Auswahl
+screenSaverTime=Bildschirmschoner nach (in Minuten)
+backUpPeriodMustBeInt=Backup Periodizität muss eine Zahl sein
+screenSaverTimeMustBeInt='Bildschirmschoner nach' muss eine Zahl sein
 
-formativeStudentAssignError = You cannot assign students to a formative OSCE in advance
-isFormativeOsce = isFormativeOsce
-exportFormativeOsceError = exportFormativeOsceError
+formativeStudentAssignError = Zu einem formativen OSCE können keine Studenten im Voraus zugeordnet werden
+isFormativeOsce = Formativer OSCE
+exportFormativeOsceError = Ein formativer OSCE kann nicht nach eOSCE exportiert werden
 
-deleteOptionError = Checklist option could not delete because it used in some OSCE
-deleteCriteriaError = Checklist criteria could not delete because it used in some OSCE
-deleteQuestionError = Checklist question could not delete because it used in some OSCE
-deleteTopicError = Checklist topic could not delete because it used in some OSCE 
-deleteTabError = Checklist tab could not delete because it used in some OSCE
+deleteOptionError = Option konnte nicht gelöscht werden, da die Checkliste verwendet wird
+deleteCriteriaError = Kriterium konnte nicht gelöscht werden, da die Checkliste verwendet wird
+deleteQuestionError = Frage konnte nicht gelöscht werden, da die Checkliste verwendet wird
+deleteTopicError = Thema konnte nicht gelöscht werden, da die Checkliste verwendet wird
+deleteTabError = Tab konnte nicht gelöscht werden, da die Checkliste verwendet wird
 
-checklistQRCode=Checklist QR code
-exportSettingsQR=Settings QR code
-checklistQuestions=Questions
+checklistQRCode=QR-Code für Checkliste
+exportSettingsQR=QR-Code für Einstellungen
+checklistQuestions=Fragen
 
-importFilesProcessed = importFilesProcessed
-fetchFilesFromCloud = fetchFilesFromCloud
+importFilesProcessed = Keine verarbeiteten Dateien
+fetchFilesFromCloud = Dateien vom Server laden
 
-backUpPeriodLengthError=Back up period must not be greater than 2 digits
-ratio=Ratio (in %)
-topicFactor=Statistic factor
-ratioExceedError=Overall percentage must not exceed 100
+backUpPeriodLengthError=Backup Periodizität darf nicht mehr als 2 Stellen haben
+ratio=Anteil (in %)
+topicFactor=Statistischer Faktor
+ratioExceedError=Aufaddierte Prozentzahlen dürfen 100% nicht übersteigen
