--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceMessages_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceMessages_cn.properties
@@ -1,4 +1,4 @@
 diffentOsceDateDateWarning=Es wurden bereits andere Daten als OSCE-Tage definiert. Diese Daten sind: [{0}]. Sind Sie sicher, dass Sie den ausgew\u00E4hlten Tag in der Umfrage verwenden woollen?
 selectedMultipleConsecutiveDays=Sind Sie sicher, dass Sie OSCEs an {0} aufeinanderfolgenden Tagen vorschlagen m\u00F6chten?
 trainingOverlapingMsg=there Another training is taking place from {0} to {1}. Are you sure you want to schedule an overlapping training?
-topicFactorMustBeNumeric={0} must be numeric value
+topicFactorMustBeNumeric={0} muss eine Zahl sein
