IOSCE-290, IOSCE-201 Removed isReview mode and updated validation for backup period.

--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants.properties
@@ -1099,3 +1099,4 @@ backUpPeriodLengthError=Backup Periodizität darf nicht mehr als 2 Stellen haben
 ratio=Anteil (in %)
 topicFactor=Statistischer Faktor
 ratioExceedError=Aufaddierte Prozentzahlen dürfen 100% nicht übersteigen
+backUpPeriodMaxLengthError=Backup Periodizität darf nicht mehr als 
