--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_cn.properties
@@ -1111,3 +1111,4 @@ backUpPeriodLengthError=Backup Periodizität darf nicht mehr als 2 Stellen haben
 ratio=Anteil (in %)
 topicFactor=Statistischer Faktor
 ratioExceedError=Aufaddierte Prozentzahlen dürfen 100% nicht übersteigen
+backUpPeriodMaxLengthError=Backup Periodizität darf nicht mehr als 
