--- a/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
+++ b/OsceManager/src/main/resources/ch/unibas/medizin/osce/shared/i18n/OsceConstants_en.properties
@@ -1059,6 +1059,7 @@ osceSettings=Osce settings
 otherInformation=Other information
 noSettingsForOsceError=No settings are available for this osce
 exportSettingsQRCode=Export settings QR code
+exportSettingsXml=Export Settings XML
 bucketType=Bucket type
 
 eOSCE = eOSCE
@@ -1094,3 +1095,4 @@ backUpPeriodLengthError=Back up period must not be greater than 2 digits
 ratio=Ratio (in %)
 topicFactor=Statistic factor
 ratioExceedError=Overall percentage must not exceed 100
+backUpPeriodMaxLengthError=Backup period must not be greater than 
